--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-fb",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A Hubot adapter for Facebook Messenger",
   "keywords": [
     "facebook messenger",
@@ -16,12 +16,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": { 
-    "type" : "git", 
-    "url" : "https://github.com/chen-ye/hubot-fb.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chen-ye/hubot-fb.git"
   },
   "license": "ISC",
   "dependencies": {
+    "mime": "^1.3.4",
     "parent-require": "^1.0.0"
   },
   "peerDependencies": {
