--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hubot-fb",
+  "name": "hubot-fb-platform",
   "version": "5.0.0",
   "description": "A Hubot adapter for Facebook Messenger",
   "keywords": [
@@ -8,19 +8,24 @@
     "hubot-scripts",
     "hubot-adapters"
   ],
-  "homepage": "https://github.com/chen-ye/hubot-fb",
+  "homepage": "https://github.com/DKByo/hubot-fb-platform",
   "bugs": {
-    "url": "https://github.com/chen-ye/hubot-fb/issues"
+    "url": "https://github.com/DKByo/hubot-fb-platform/issues"
   },
   "author": "Chen Ye <cye@brown.edu> (cye.me)",
-  "contributors": [],
+  "contributors": [
+    {
+      "name":"Danyel Cabello",
+      "email":"danyel.nerv@gmail.com",
+      "url":"http://codecaster.net" 
+    }],
   "main": "src/fb.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chen-ye/hubot-fb.git"
+    "url": "https://github.com/DKByo/hubot-fb-platform.git"
   },
   "license": "ISC",
   "dependencies": {
